  [Michele Simionato]
  * Implemented `oq engine --run job1.ini .. jobN.ini --hc parent.hdf5`
  * Extended `--hc` to accept paths to datastore files
  * Using the filtered site collection, thus changing numbers in OQImpact
  * Implemented rupture prefiltering for scenario and event based calculators

  [Paolo Tormene]
  * Added the possibility to assign tags to jobs and to set a job as the
    "preferred" one for a tag

  [Michele Simionato]
  * Internal: extended reduce_sm to reduce the source models to a single source
  * Implemented event_based_risk from ses.hdf5
  * Raised an early error if the vulnerability functions are not
    strictly increasing
  * Fixed a bug in classical_risk with nontrivial weights in the
    taxonomy mapping
  * Removed the ebrisk calculation mode, since it can be replaced
    with event_based_risk with ground_motion_fields = false
  * Turned LSD into a primary IMT, so that the Youd and ZhangZhao GMPE
    can be used

  [Lana Todorovic]
  * Added Abrahamson and Bhasin (2020) GMPE
  * Fixed the Macedo2019 GMPE with underlying GMPEs requiring extra parameters
    (like the KuehnEtAl2020SInter requiring ztor)

  [Michele Simionato]
  * Filtering GMFs associated to low secondary intensities to make
    secondary peril calculations faster and using less disk space
  * gzipped the _rates dataset, saving up to 4x the disk space required in
    classical calculations, as well as doubling the speed of the postclassical

  [Michele Simionato, Antonio Ettorre]
  * Upgraded numpy to version 2.2, including related dependencies such as
    pandas, pyproj, GDAL, fiona, etc

  [Paolo Tormene]
  * When running a job via the WebUI it is possible to specify in the POST an
    additional 'notify_to' parameter to be used to send a notification on job
    completion via web hook to the given URL, and another 'job_owner'
    parameter to assign the new job to the specified owner instead of to the
    user performing the request