@@ -115,17 +115,17 @@ def read_job_inis(inis, INPUTS):
     return out, rows
 
 
-def main(mosaic_dir, out, models='ALL', *,
+def main(what, out, *,
          number_of_logic_tree_samples:int=2000,
          ses_per_logic_tree_path:int=50, minimum_magnitude:float=5):
     """
     Storing global SES
     """
-    if models == 'ALL':
-        inis = [os.path.join(mosaic_dir, model, 'in', 'job_vs30.ini')
-                for model in MODELS]
+    if what.endswith('.ini'):
+        inis = what.split(',')
     else:
-        inis = models.split(',')
+        inis = [os.path.join(what, model, 'in', 'job_vs30.ini')
+                for model in MODELS]
     INPUTS = dict(
         calculation_mode='event_based',
         number_of_logic_tree_samples= str(number_of_logic_tree_samples),
@@ -149,9 +149,8 @@ def main(mosaic_dir, out, models='ALL', *,
     print(mon)
     return fnames
 
-main.mosaic_dir = 'Directory containing the hazard mosaic'
+main.what = 'Comma-separated job.ini files or mosaic directory'
 main.out = 'Output file'
-main.models = 'Models to consider (comma-separated)'
 main.number_of_logic_tree_samples = 'Number of samples'
 main.ses_per_logic_tree_path = 'Number of SES'
 main.minimum_magnitude = 'Discard ruptures below this magnitude'
